--- a/themes/hyde-hyde/layouts/index.html
+++ b/themes/hyde-hyde/layouts/index.html
@@ -3,24 +3,11 @@
 {{- end }}
 
 {{ define "content" -}}
-  <div class="posts">
-  {{ range (where .Data.Pages "Type" "!=" "about").GroupBy "Section" }}
-    {{ range .Pages }}
-      <div class="post">
-        <h1 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a>{{ if .Draft }}<sup><i class="fas fa-pen-square fa-xs"></i></sup>{{ end }}</h1>
-        <span class="post-date">
-          {{- .Date.Format (.Site.Params.dateformat | default "Jan 02, 2006") -}}
-        </span>
-        {{ .Summary }}
-        {{ if .Truncated }}
-        <div class="read-more-link">
-            <a href="{{ .RelPermalink }}">Read More…</a>
-        </div>
-        {{ end }}
-        </div>
-     {{- end -}}
-  {{- end }}
+  {{ range .Data.Pages -}}
+  <div class="post-list">
+    {{ partial "post_list_item.html" . }}
   </div>
+  {{- end}}
 {{- end }}
 
 {{ define "footer" -}}
