--- a/themes/hyde-hyde/static/css/custom.css
+++ b/themes/hyde-hyde/static/css/custom.css
@@ -1,9 +1,9 @@
 html,
 body
 {
-    font-family: 'Fira Sans', sans-serif;
+    font-family: "IBM Plex Sans",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Droid Sans","Ubuntu","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     font-size: 18px;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 1.5;
 }
 
@@ -81,4 +81,42 @@ code {
 /* Changing from font-awesome 4 to 5, the class pull-right was removed */
 .pull-right {
     float: right;
+}
+
+.post-list-item {
+    margin-bottom: 3em;
+}
+
+.item-title {
+    display: block;
+    font-size: 1.5rem;
+    line-height: 1.25; 
+}
+
+.item-date {
+    color: #9a9a9a;
+    display: block; 
+    font-size: 1rem; 
+    margin-bottom: .2rem;
+    margin-top: .2rem;
+}
+
+.read-more-symbol {
+    border-style: none;
+    text-decoration: none;
+}
+
+.img-headshot-container {
+    display: inline-block;
+    position: relative;
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.img-headshot-container img{
+    max-width: unset;
+    width: 250px;
+    margin-left: -50px;
 }
