polishing for launch

--- a/themes/hyde-hyde/static/css/hyde.css
+++ b/themes/hyde-hyde/static/css/hyde.css
@@ -62,7 +62,7 @@ pre {
   text-align: center;
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
-  background-color: #300030;
+  background-color: #052c00;
 }
 @media (min-width: 48em) {
   .sidebar {
